--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ font-family: 'Roboto', sans-serif;
 .logo-part{
     display: flex;
     padding-left: 15px;
+  
 }
 
 .logo-part img{
@@ -106,6 +107,50 @@ font-family: 'Roboto', sans-serif;
    display: grid;
      grid-template-columns: auto auto auto;
      grid-column-gap: 50px;
+}
+footer{
+    width: 100%;
+    height: 450px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+footer h1{
+    padding: 80px;
+}
+footer hr {
+    width: 80%;
+   
+}
+.footer-part{
+    display: flex;
+    margin-left: 120px;
+    padding-left: 50px;
+    padding-right: 0px;
+    
+}
+.footer-part h4{
+    margin-left: 70px;
+}
+.flag{
+    display: flex;
+    justify-content: center;
+   
+}
+.flag h2{
+    margin-top: 100px;
+    padding: 15px;
+}
+.flag img{
+     width: 120px;
+     height: 80px;
+     margin-top: 80px;
+
+     
+}
+.shidule{
+    text-align: center;
+    padding: 30px;
 }
 
 
